# readability-transformers

./: .gitignore  .nfs00000000068a044500000004  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  submission.csv
docs/source/: conf.py  index.rst
examples/: 1_st_train.py  2_rp_train.py  3_twostep_st_train.py  4_twostep_fc_train.py  5_twostep_api.py  6_full_rt_twostep.py  7_twostep_then_rp.py  ablation_call.py  ablation_rp.py  ablation_rp_stats.py  ablation_twostep.py  attn_end_to_end.py  classification_train.py  end_to_end_train_twostepped.py  inference.py  lf_no_twostep.py  lf_twostep.py  no_norm_no_actf.py  readnet.py  smaller_twostep.py  submission.csv
examples/first_round/: ablation_rp_stats.py  inference.py
examples/readnet/: predict.py  retrain.py  train.py
examples/second_roberta_plus_roberta/: rp_train_robert.py
examples/third_round_v16/: classification_train.py  no_norm_no_actf.py
readability_transformers/: ReadNet.py  ReadabilityTransformer.py  __init__.py  file_utils.py  reset_cache.py
readability_transformers/dataset/: CEFRDataset.py  CommonLitDataset.py  Dataset.py  __init__.py
readability_transformers/features/: DocumentLingFeat.py  FeatureBase.py  LingFeat.py  LingFeatExtractor.py  SentenceLingFeat.py  TRUNAJOD.py  TRUNAJODExtractor.py  TransformersLogits.py  __init__.py
readability_transformers/losses/: DenormMSELoss.py  DenormRMSELoss.py  RankingMSELoss.py  WeightedMSELoss.py  __init__.py  (+1 more)
readnet_temp/: train.csv  valid.csv  valid_document_level_features.pkl  valid_sentence_level_features.pkl
rtests/: readnet.py
(+57 files in other folders)
