[metadata]
name = readability-transformers
version = 0.0.1
author = Chan Woo Kim
author_email = chanwkim01@gmail.com
description = Package for integrating transformer modules for readability-related NLP tasks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codeandproduce/readability-transformers
project_urls =
    Bug Tracker = https://github.com/codeandproduce/readability-transformers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved ::Apache License 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src